<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/txt_navi_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_history"
        android:title="@string/txt_navi_user"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account"
        android:title="@string/txt_navi_profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_listchat"
        android:icon="@drawable/ic_history"
        android:title="@string/txt_navi_messager"
        app:showAsAction="always" />
</menu>