<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_200sdp"
        android:background="@color/color_new"
        android:orientation="vertical" />

    <com.blogspot.atifsoftwares.circularimageview.CircularImageView
        android:id="@+id/img_login_header"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/icon_logoapp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_login_header"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/_10sdp"
        app:contentPadding="@dimen/_3sdp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/txt_login"
                    android:textColor="@color/color_background_main"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edt_login_email"
                        style="@style/StyleEditTextSignInSignUP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:hint="@string/txt_email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edt_login_pass"
                        style="@style/StyleEditTextSignInSignUP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:hint="@string/txt_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txt_forgot_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:text="@string/txt_forgot_password"
                    android:textColor="@color/color_background_main"
                    android:textSize="@dimen/_12ssp" />

                <Button
                    android:id="@+id/btn_login_confirm"
                    style="@style/StyleButtonSignInSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:text="@string/txt_confirm"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/txt_register_new_acc"
                    android:textColor="@color/black_two"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/txt_or_loginwith"
                    android:textColor="@color/black_two"
                    android:textSize="@dimen/_12ssp" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btn_google_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_5sdp" />


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
